
{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 16,
  "lineage": "a16d4710-9b7a-adcb-41d7-5ad0bcfe254b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:131377894429:loadbalancer/NPA21-development-nginx-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "NPA21-development-nginx-elb-3004775.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "NPA21-development-nginx-elb",
            "idle_timeout": 60,
            "instances": [
              "i-0358689016e915e25",
              "i-054efe34223d06f6f"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "NPA21-development-nginx-elb",
            "security_groups": [
              "sg-089206550e1ab4a48"
            ],
            "source_security_group": "131377894429/NPA21-development-nginx_elb_sg",
            "source_security_group_id": "sg-089206550e1ab4a48",
            "subnets": [
              "subnet-078c33c7e53dec1d4",
              "subnet-09a024c5c24ab31aa"
            ],
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-elb"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_security_group.elb-sg",
            "aws_security_group.nginx-sg",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ee2037aae8e996c",
            "arn": "arn:aws:ec2:us-east-1:131377894429:instance/i-084176b85ffe22a77",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-084176b85ffe22a77",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01df392e04a86e306",
            "private_dns": "ip-10-0-0-135.ec2.internal",
            "private_ip": "10.0.0.135",
            "public_dns": "ec2-54-80-33-217.compute-1.amazonaws.com",
            "public_ip": "54.80.33.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0124af69b02c3f2c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a024c5c24ab31aa",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-db1"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-db1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fde96364f33309ff"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ee2037aae8e996c",
            "arn": "arn:aws:ec2:us-east-1:131377894429:instance/i-0dd35d71ec90782d2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd35d71ec90782d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-000445b0f3b359838",
            "private_dns": "ip-10-0-1-77.ec2.internal",
            "private_ip": "10.0.1.77",
            "public_dns": "ec2-3-239-181-241.compute-1.amazonaws.com",
            "public_ip": "3.239.181.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e320d52426e09e1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078c33c7e53dec1d4",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-db2"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-db2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fde96364f33309ff"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ee2037aae8e996c",
            "arn": "arn:aws:ec2:us-east-1:131377894429:instance/i-054efe34223d06f6f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054efe34223d06f6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0358277220c4bd06a",
            "private_dns": "ip-10-0-0-210.ec2.internal",
            "private_ip": "10.0.0.210",
            "public_dns": "ec2-54-174-181-181.compute-1.amazonaws.com",
            "public_ip": "54.174.181.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07c330564f63a45b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a024c5c24ab31aa",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-nginx1"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-nginx1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fde96364f33309ff"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ee2037aae8e996c",
            "arn": "arn:aws:ec2:us-east-1:131377894429:instance/i-0358689016e915e25",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0358689016e915e25",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-040183592ed1fb8b3",
            "private_dns": "ip-10-0-1-91.ec2.internal",
            "private_ip": "10.0.1.91",
            "public_dns": "ec2-3-238-148-130.compute-1.amazonaws.com",
            "public_ip": "3.238.148.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e756b0a19b094d10",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078c33c7e53dec1d4",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-nginx2"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-nginx2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fde96364f33309ff"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131377894429:internet-gateway/igw-0e88d6c7c391ca467",
            "id": "igw-0e88d6c7c391ca467",
            "owner_id": "131377894429",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-Igw"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-Igw"
            },
            "vpc_id": "vpc-0504548b82583e1f8"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131377894429:route-table/rtb-0c384fa7041083f55",
            "id": "rtb-0c384fa7041083f55",
            "owner_id": "131377894429",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e88d6c7c391ca467",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-publicRoute"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-publicRoute"
            },
            "vpc_id": "vpc-0504548b82583e1f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Igw",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c4de38b271d87c6",
            "route_table_id": "rtb-0c384fa7041083f55",
            "subnet_id": "subnet-09a024c5c24ab31aa"
          },
          "dependencies": [
            "aws_internet_gateway.Igw",
            "aws_route_table.publicRoute",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac9d25477e6b0d08",
            "route_table_id": "rtb-0c384fa7041083f55",
            "subnet_id": "subnet-078c33c7e53dec1d4"
          },
          "dependencies": [
            "aws_internet_gateway.Igw",
            "aws_route_table.publicRoute",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131377894429:security-group/sg-089206550e1ab4a48",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089206550e1ab4a48",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "NPA21-development-nginx_elb_sg",
            "name_prefix": "",
            "owner_id": "131377894429",
            "revoke_rules_on_delete": false,
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-elb-sg"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0504548b82583e1f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131377894429:security-group/sg-0fde96364f33309ff",
            "description": "Allow ssh and web access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fde96364f33309ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "NPA21-development-nginx_sg",
            "name_prefix": "",
            "owner_id": "131377894429",
            "revoke_rules_on_delete": false,
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-nginx-sg"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0504548b82583e1f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131377894429:subnet/subnet-09a024c5c24ab31aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-09a024c5c24ab31aa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131377894429",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-Public1"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-Public1"
            },
            "vpc_id": "vpc-0504548b82583e1f8"
          },
          "dependencies": [
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131377894429:subnet/subnet-078c33c7e53dec1d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-078c33c7e53dec1d4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131377894429",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-Public2"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-Public2"
            },
            "vpc_id": "vpc-0504548b82583e1f8"
          },
          "dependencies": [
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131377894429:vpc/vpc-0504548b82583e1f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ec057fe72e61fa50",
            "default_route_table_id": "rtb-0d1b4f9b1db9ed9eb",
            "default_security_group_id": "sg-0447163db4c22d2c1",
            "dhcp_options_id": "dopt-0006ababbf0bd34d6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0504548b82583e1f8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d1b4f9b1db9ed9eb",
            "owner_id": "131377894429",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-vpc-Test-by-MIN"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-vpc-Test-by-MIN"
            }
          }
        }
      ]
    }
  ]
}